--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,8 +63,8 @@ jobs:
               run: |
                   pip install flake8 black isort
                   flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-                  black --check .
-                  isort --check-only .
+                  black . --verbose
+                  isort . --verbose
 
     # build:
     #     runs-on: ubuntu-latest
