--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,44 +66,43 @@ jobs:
                   black . --verbose
                   isort . --verbose
 
-    # build:
-    #     runs-on: ubuntu-latest
-    #     needs: test
+    build:
+        runs-on: ubuntu-latest
+        needs: test
 
-    #     steps:
-    #         - name: Checkout code
-    #           uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-    #         - name: Set up Docker Buildx
-    #           uses: docker/setup-buildx-action@v2
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
 
-    #         - name: Log in to Docker Hub
-    #           uses: docker/login-action@v2
-    #           with:
-    #               username: ${{ secrets.DOCKER_USERNAME }}
-    #               password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #         - name: Build and push Docker image
-    #           uses: docker/build-push-action@v4
-    #           with:
-    #               context: .
-    #               push: true
-    #               tags: minhtai03/meowchat:latest
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v4
+              with:
+                  context: .
+                  push: true
+                  tags: minhtai03/mammoai-backend:cpu-only
 
-    # Commented out original deployment code for reference
-    # deploy:
-    #     runs-on: ubuntu-latest
-    #     needs: build
-    #     steps:
-    #         - name: Deploy to VPS
-    #           uses: appleboy/ssh-action@v0.1.5
-    #           with:
-    #               host: ${{ secrets.VPS_HOST }}
-    #               username: ${{ secrets.VPS_USERNAME }}
-    #               key: ${{ secrets.VPS_SSH_KEY }}
-    #               port: ${{ secrets.VPS_PORT }}
-    #               script: |
-    #                   sudo docker pull minhtai03/meowchat:latest
-    #                   sudo docker stop meowchat_flask_container || true
-    #                   sudo docker rm meowchat_flask_container || true
-    #                   sudo docker run --env-file .env -d -p 5000:5000 --name meowchat_flask_container --restart unless-stopped minhtai03/meowchat:latest
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Deploy to VPS
+              uses: appleboy/ssh-action@v0.1.5
+              with:
+                  host: ${{ secrets.VPS_HOST }}
+                  username: ${{ secrets.VPS_USERNAME }}
+                  key: ${{ secrets.VPS_SSH_KEY }}
+                  port: ${{ secrets.VPS_PORT }}
+                  script: |
+                      sudo docker pull minhtai03/mammoai-backend:cpu-only
+                      sudo docker stop mammoai-backend_container || true
+                      sudo docker rm mammoai-backend_container || true
+                      sudo docker run --env-file .env -d -p 8015:8015 --name mammoai-backend_container --restart unless-stopped minhtai03/mammoai-backend:cpu-only
