--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,44 +32,44 @@ jobs:
             PORT: ${{ secrets.PORT }}
             FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+        # steps:
+        #     - name: Checkout code
+        #       uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v4
-              with:
-                  python-version: "3.10"
+        #     - name: Set up Python
+        #       uses: actions/setup-python@v4
+        #       with:
+        #           python-version: "3.10"
 
-            - name: Cache pip dependencies
-              uses: actions/cache@v3
-              with:
-                  path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pip-
+        #     - name: Cache pip dependencies
+        #       uses: actions/cache@v3
+        #       with:
+        #           path: ~/.cache/pip
+        #           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        #           restore-keys: |
+        #               ${{ runner.os }}-pip-
 
-            - name: Install dependencies
-              run: |
-                  pip install -r requirements.txt
-                  pip install pytest pytest-cov pytest-asyncio httpx
+        #     - name: Install dependencies
+        #       run: |
+        #           pip install -r requirements.txt
+        #           pip install pytest pytest-cov pytest-asyncio httpx
 
-            - name: Run unit tests
-              run: |
-                  # Load test environment variables
-                  export $(cat .env.test | xargs)
-                  pytest tests
+        #     - name: Run unit tests
+        #       run: |
+        #           # Load test environment variables
+        #           export $(cat .env.test | xargs)
+        #           pytest tests
 
-            - name: Run linting
-              run: |
-                  pip install flake8 black isort
-                  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-                  black . --verbose
-                  isort . --verbose
+        #     - name: Run linting
+        #       run: |
+        #           pip install flake8 black isort
+        #           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        #           black . --verbose
+        #           isort . --verbose
 
     build:
         runs-on: ubuntu-latest
-        needs: test
+        # needs: test
 
         steps:
             - name: Checkout code
